@@ -1,3 +1,5 @@
+2006/3/23 -- released version 20060323_trunk
+
 2006/3/22 -- released version 20060322_trunk
 
 2006/3/21 -- released version 20060321_trunk
